<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/payment"
            android:title="@string/menu_payments" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/message"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_fee_provs"
            android:icon="@drawable/fee_prov"
            android:title="@string/menu_fee_providers" />
    </group>
</menu>
