<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dapos.ui.main.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.dapos.ui.main.payment.PaymentFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_payments">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_payments"
        android:name="com.example.dapos.ui.main.payment.PaymentFragment"
        android:label="@string/menu_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.dapos.ui.main.chat.ChatFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />



    <fragment
        android:id="@+id/nav_fee_provs"
        android:name="com.example.dapos.ui.main.feeprov.FeeProviderFragment"
        android:label="@string/menu_fee_providers"
        tools:layout="@layout/fragment_fee_provs" />
</navigation>